# xivstrat

./: .dockerignore  .env  .eslintignore  .gitignore  .prettierrc  AOE以760物理职业物魔防计算.txt  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  TAURI_README.md  astro.config.electron.mts  astro.config.mts  astro.config.tauri.mts  biome.json  components.json  compose.yaml  edgeone.json  eslint.config.mts  generate-tauri-icons.bat  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-tauri.sh  tsconfig.json  turbo.json
.github/workflows/: build-check.yml  code-quality.yml  tauri-build.yml
apps/main/: Dockerfile  astro.config.mts  package.json  tsconfig.json  turbo.json
cli/: generate-icons.js  minify_public_scripts.js
conf/: Caddyfile
electron/: .gitignore  README.md  check-dist.js  debug.js  dev.js  electron-builder.json  generate-icons.js  main.js  package.json  preload.js  test-prod.js  version.js
public/scripts/: initTheme.min.js
src/: content.config.ts  env.d.ts  middleware.js  middleware.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/auth/: client.ts  reactClient.ts  schema.ts  vueClient.ts
src/components/: Action.astro  Action.vue  AreaBox.astro  Badge.astro  Boss.astro  Buff.astro  Buff.vue  Carousel.vue  CheatsheetDialog.vue  CollapsibleBox.vue  CombinedIcon.astro  CosImage.astro  DamageInfo.astro  DamageVariant.astro  DarkModeButton.astro  DeveloperCard.astro  DotInfo.astro  DraftWarning.astro  (+42 more)
(+1340 files in other folders)
